<resources>
    <string name="app_name">FinalProject_CST2335</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_movie_main">MovieMain</string>
    <string name="title_section1">Movie Information</string>
    <string name="title_section2">Saved Movie</string>
    <string name="title_section3">Section 3</string>

    <string name="action_example">Example action</string>
    <string name="cbc_news_jonathan_dan">CBC News - Jonathan Dan</string>
    <string name="food_nutrition_database_nhu_ngoc_dang">Food Nutrition Database - Nhu Ngoc Dang</string>
    <string name="octranspo_bus_route_kim_dang">OCTranspo Bus Route - Kim Dang</string>
    <string name="movie_information_vi_pham">Movie Information - Vi Pham</string>
    <string name="this_is_final_project_of_our_group">This is final project of our group</string>


    <string name="hint_text">Type here</string>
    <string name="button">Search</string>
    <string name="search_mess">"Searched the information"</string>
    <string name="welcome_mess">"Welcome to the nutrition database"</string>
    <string name="dialog_mess">Are you sure to go to the Favorite List?</string>
    <string name="dialog_tittle">Confirmation</string>
    <string name="dialog_sure">Sure</string>
    <string name="dialog_no">No</string>
    <string name="favorite_button">Favorite List</string>
    <string name="item_help">Help</string>
    <string name="other_activity">Other Activities</string>
    <string name="help_menu">Help Menu</string>
    <string name="instruction">Author: Nhu Ngoc Dang.\nVersion: 1.\nThis interface lets the user search the food content. Plus, user can add to the favorite list. From the favorite list, user can select an item quickly and add a tag string and get the statistic on each tag</string>
    <string name="food_activity_tittle">Food Page</string>
    <string name="food_information_tittle">Food Content</string>
    <string name="food_toolbar_tittle">Food Toolbar</string>
    <string name="favorite_page_tittle">Food Toolbar</string>
    <string name="close_button_dialog">Close</string>
    <string name="add_button">ADD TO FAVORITE</string>
    <string name="toast_message_add_button">The favorite foods are added to the list</string>
    <string name="take_me_back">Back</string>


    <string name="movie_Year">Year</string>
    <string name="movie_Rating">Rating</string>
    <string name="movie_Runtime">Run Time</string>
    <string name="movie_mainActors">Main Actors</string>
    <string name="movie_plot">Movie Plot</string>
    <string name="URL_poster">URL</string>
    <string name="Vi">Design by Vi Pham</string>
    <string name="food_version">Version 1</string>
    <string name="food_help">Enter a movie name and click the search button, click save to save it to favourite </string>
    <string name="food_help2">Click Favourite button to open movie\'s favourite site, click movie in the list to show detail information</string>
    <string name="close">Close</string>
    <string name="help">Help</string>
    <string name="errorBlank">You can not let search movie blank</string>
    <string name="favourite_movie_list">Your favourite List</string>
    <string name="movie_search_title">Search movie</string>



    <string name="search">Search</string>
    <string name="TripDes">Trip Destination</string>
    <string name="name">name</string>
    <string name="latitude">Latitude</string>
    <string name="longtitude">Longtitude</string>
    <string name="gps"> GPS </string>
    <string name="startTime">Start Time</string>
    <string name="adjustedTime">Adjusted Time</string>
    <string name="add">Add</string>
    <string name="Ok">OK</string>
    <string name="Cancel">Cancel</string>
    <string name="Back"> Back</string>
    <string name="route_number">Route Number</string>
    <string name="direction">Direction</string>
    <string name="direction_heading">Direction Heading</string>
    <string name="help">Author: Kim Ngan Dang </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
