<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/movie_fav_Title_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movie_Title"
        android:textSize="20dp"
        android:typeface="sans" />

    <TextView
        android:id="@+id/movie_fav_Year_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movie_Year"
        android:textSize="20dp"
        android:typeface="sans" />

    <TextView
        android:id="@+id/movie_fav_Rating_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movie_Rating"
        android:textSize="20dp"
        android:typeface="sans" />

    <TextView
        android:id="@+id/movie_fav_Runtime_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movie_Runtime"
        android:textSize="20dp"
        android:typeface="sans" />

    <TextView
        android:id="@+id/movie_fav_MainActors_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movie_mainActors"
        android:textSize="20dp"
        android:typeface="sans" />

    <TextView
        android:id="@+id/movie_fav_plot_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movie_plot"
        android:textSize="20dp"
        android:typeface="sans" />

    <Button
        android:id="@+id/delete_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:text="Delete" />


</LinearLayout>
