<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InfoFragmentActivity">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/TripDes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/TripDes" />


    <TextView
        android:id="@+id/latitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_alignEnd="@+id/TripDes"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/TripDes"
        android:text="@string/latitude" />


    <TextView
        android:id="@+id/longtitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_alignEnd="@+id/startTime"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/startTime"
        android:text="@string/longtitude" />




    <TextView
        android:id="@+id/gps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_alignEnd="@+id/latitude"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/latitude"
        android:text="@string/gps" />


    <TextView
        android:id="@+id/startTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_alignEnd="@+id/gps"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/gps"
        android:text="@string/startTime" />


    <TextView
        android:id="@+id/adjustedTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_alignEnd="@+id/longtitude"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/longtitude"
        android:text="@string/adjustedTime" />


    <!--<Button
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"

        android:text="@string/add"/>

    <Button
        android:id="@+id/goBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:text="@string/Back"
        />-->

</RelativeLayout>