<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/routeNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/route_number" />
    <TextView
        android:id="@+id/direction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       android:layout_below="@+id/routeNumber"
        android:layout_weight="1"
        android:text="@string/direction" />
    <TextView
        android:id="@+id/dirHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/direction"
        android:layout_weight="1"
        android:text="@string/direction_heading" />
</RelativeLayout>