<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FoodInformation"
    android:background="#FF9966">

    <TextView
        android:id="@+id/food_name_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="30dp"
        />

    <TextView
        android:id="@+id/calories_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/food_name_textview"
        android:gravity="center"
        android:textSize="30dp"
        />

    <TextView
        android:id="@+id/fat_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/calories_textview"
        android:gravity="center"
        android:textSize="30dp"/>

    <ProgressBar
        android:id="@+id/food_progressbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fat_textview"
        android:visibility="visible"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/take_me_back"
        android:text="@string/take_me_back"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"/>
    <Button
        android:id="@+id/add_favorite_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_button"
        android:layout_below="@+id/food_progressbar"
        android:gravity="center"

        />

    <Button
        android:id="@+id/favorite_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/favorite_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        />




</RelativeLayout>

